# afk.exe

./: .gitignore  README.md  package.json
Backend/: .env.example  Dockerfile  PULL_ARCHITECTURE_GUIDE.md  README.md  afk_monitor.db  openapi.json  pyproject.toml  run_server.py  seed_demo_data.py
Backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
Backend/app/routers/: __init__.py  auth.py  health.py  sessions.py
Backend/app/services/: __init__.py  extension_client.py
Backend/app/utils/: __init__.py  auth.py
Frontend/: README.md  env-setup.md  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.tsx  index.css
Frontend/src/components/analytics/: AnalyticsPage.tsx
Frontend/src/components/auth/: GitHubCallback.tsx  LoginPage.tsx
Frontend/src/components/dashboard/: Dashboard.tsx
Frontend/src/components/debug/: ApiDebug.tsx
Frontend/src/components/languages/: LanguagesPage.tsx
Frontend/src/components/layout/: Header.tsx  Sidebar.tsx
Frontend/src/components/projects/: ProjectsPage.tsx
Frontend/src/components/sessions/: SessionsPage.tsx
Frontend/src/components/settings/: TokenPage.tsx
Frontend/src/components/test/: ApiTest.tsx
Frontend/src/components/timeline/: TimelinePage.tsx
Frontend/src/lib/: api.ts  utils.ts
Frontend/src/store/: authStore.ts
Frontend/src/types/: api.ts
extension/: .vscodeignore  README.md  afk-coding-monitor-0.0.1.vsix  package-lock.json  package.json
extension/src/: api.ts  config.ts  extension.ts  monitor.ts  tracker.ts  types.ts
(+4 files in other folders)
