[project]
name = "afk-backend"
version = "1.0.0"
description = "AFK Coding Monitor Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "python-jose==3.3.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx>=0.28.1",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
] 
